Add testcases for Character (%d, %x, %o), %c (Integer, byte, short), Byte (%x), and short (%x)